# ineo_service

./: .gitignore  Dockerfile  app.py  build.sh  elastic_index.py  entrypoint.sh  pyproject.toml  readme.md  requirements.txt
