[project]
name = "service"
version = "0.1.0"
description = "Middleware service"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2021.5.30",
    "charset-normalizer==2.0.7",
    "click==8.0.1",
    "elasticsearch==7.14.1",
    "flask-cors==5.0.0",
    "flask==2.0.1",
    "gunicorn==20.1.0",
    "idna==3.3",
    "itsdangerous==2.0.1",
    "jinja2==3.0.1",
    "markupsafe==2.0.1",
    "python-dateutil==2.8.2",
    "requests==2.26.0",
    "six==1.16.0",
    "urllib3==1.26.6",
    "werkzeug==2.0.1",
]
